--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "5.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.4.*",
+        "symfony/runtime": "5.4.*",
         "symfony/serializer": "5.4.*",
         "symfony/stopwatch": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
