--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,30 @@
 {
     "type": "project",
-    "license": "proprietary",
-    "minimum-stability": "dev",
+    "license": "MIT",
+    "description": "This project catches all incoming HTTP requests and shows a maintenance page. The maintenance message can be controlled by JSON files in a directory.",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "6.4.*",
-        "symfony/debug-bundle": "6.4.*",
         "symfony/dotenv": "6.4.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
-        "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/serializer": "6.4.*",
-        "symfony/stopwatch": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
-        "symfony/var-dumper": "6.4.*",
-        "symfony/web-profiler-bundle": "6.4.*",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "6.4.*",
+        "symfony/stopwatch": "6.4.*",
+        "symfony/var-dumper": "6.4.*",
+        "symfony/web-profiler-bundle": "6.4.*"
     },
     "config": {
         "optimize-autoloader": true,
