BG - Symfony framework recipes

--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f8689b8b5662f74199849c383c0d53b2
+APP_SECRET=
 ###< symfony/framework-bundle ###
